<resources>
    <string name="app_name">MoviesFun</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">OPEN drawer</string>
    <string name="close_drawer">Close drawer</string>


    <string name="title_activity_movies_adapter">MoviesAdapter</string>
    <string name="popular_movies_url">https://api.themoviedb.org/3/discover/movie?sort_by=popularity.desc</string>
    <string name="movie_base_url">https://api.themoviedb.org/3/movie/</string>
    <string name="api_key_movies_db">api_key=4eec6698891c4b89358a3779d7f2d212</string>
    <string name="poster_prefix_path">http://image.tmdb.org/t/p</string>
    <string name="movie_prefix_path">https://api.themoviedb.org/3/movie</string>
    <string name="image_size_w500">w500/</string>
    <string name="image_size_w300">w300</string>
    <string name="image_size_w45">w45/</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="overview">Movie Info</string>
    <string name="homepage">Website</string>
    <string name="ratings">Ratings</string>
    <string name="release_date">Release Date</string>
    <string name="genres">Genres</string>
    <string name="item_movies">movies</string>

    <string name="input_date_format">yyyy-MM-dd</string>
    <string name="output_date_format">MMM dd, yyyy</string>
    <string name="not_available">N/A</string>
    <string name="no_favorites_msg">You haven\'t added any favorites. \n To add favorites tap the favorite icon in the movie description.</string>
</resources>
