<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/moviebackdrop_details"
        android:layout_width="match_parent"

        android:layout_height="200dp"
        android:background="@color/black"
        />

    <TextView
        android:id="@+id/title_details"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content"/>



    <!-- Heading for movie info -->
    <TextView
        android:text="@string/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_description"
        android:layout_marginTop="15dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
       />

    <TextView
        android:id="@+id/overview_details"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:paddingTop="@dimen/abc_button_padding_horizontal_material">

    </TextView>

    <!-- start ratings and favorites bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:background="@color/ratings_bar_border"
        android:layout_height="64dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/rating_bar_border_width"
            android:layout_marginTop="@dimen/rating_bar_border_width"
            android:layout_marginBottom="@dimen/rating_bar_border_width"
            android:background="@color/light_grey"
            android:padding="@dimen/rating_bar_border_width"
            android:layout_height="match_parent">

            <!--android:progressTint="@color/yellow"-->
            <RatingBar android:id="@+id/rating_bar"
                       style="?android:attr/ratingBarStyleSmall"
                       android:stepSize="0.5"
                       android:layout_gravity="center_horizontal|center_vertical"
                       android:layout_width="wrap_content"
                       android:layout_height="28dp"
                       android:paddingTop="8dp"

                       android:numStars="5"
                       android:foregroundGravity="center_vertical|center_horizontal"/>
            <TextView
                android:text="@string/ratings"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textColor="@color/text_description"
                android:gravity="center_vertical|center_horizontal"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/light_grey"
            android:padding="@dimen/rating_bar_border_width"
            android:layout_marginTop="@dimen/rating_bar_border_width"
            android:layout_marginBottom="@dimen/rating_bar_border_width"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"

                android:orientation="vertical"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:paddingTop="4dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:id="@+id/imageView"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"

                    android:text="@string/favorite"
                    android:gravity="center_vertical|center_horizontal"
                    android:id="@+id/favorite_textBar"
                    android:textColor="@color/text_description"

                    />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <!-- end ratings and favorites bar  -->

    <!--Genre -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/abc_button_padding_horizontal_material"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/details_text_desc_width"
            android:layout_height="wrap_content"
            android:textColor="@color/text_description"
            android:text="@string/genres"
            />

        <TextView
            android:id="@+id/genres_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <!--Actors -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/abc_button_padding_horizontal_material"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/details_text_desc_width"
            android:layout_height="wrap_content"
            android:textColor="@color/text_description"
            android:text="Actors"
            />

        <TextView
            android:id="@+id/actors_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <!-- runtime bar -->
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/abc_button_padding_horizontal_material"
      android:paddingLeft="@dimen/activity_vertical_margin"
      android:orientation="horizontal">

      <TextView
          android:layout_width="@dimen/details_text_desc_width"
          android:layout_height="wrap_content"
          android:textColor="@color/text_description"
          android:text="@string/runtime"
          />

      <TextView
          android:id="@+id/runtime"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/black"
          />
    </LinearLayout>

    <!-- Revenue -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/abc_button_padding_horizontal_material"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/details_text_desc_width"
            android:layout_height="wrap_content"
            android:textColor="@color/text_description"
            android:text="@string/revenue"
            />

        <TextView
            android:id="@+id/revenueTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/abc_button_padding_horizontal_material">




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/abc_button_padding_horizontal_material"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:paddingRight="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="@dimen/details_text_desc_width"
            android:layout_height="match_parent"
            android:text="@string/homepage"
            android:textColor="@color/text_description"
            />

        <TextView
            android:id="@+id/homepage_textbox"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:autoLink="web"
            android:textColor="@color/colorPrimary"

            />



    </LinearLayout>
</LinearLayout>

</ScrollView>


